fix bug. see http://rb.corp.taobao.com/r/100766/
git-svn-id: http://code.taobao.org/svn/tfs@3170 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.7/src/Makefile.am
+++ b/branches/stable-2.5.7/src/Makefile.am
@@ -2,10 +2,10 @@ AUTOMAKE_OPTIONS=foreign
 
 if WITH_LIFECYCLE
 SUBDIRS = common message requester clientv2 dataserver nameserver \
-	rcserver monitor kv_meta_server checkserver syncserver migrateserver kv_meta_server \
+	rcserver monitor kv_meta_server checkserver migrateserver kv_meta_server \
 	life_cycle_manager tools
 else
 SUBDIRS = common message requester clientv2 dataserver nameserver \
-	rcserver monitor kv_meta_server checkserver syncserver migrateserver kv_meta_server \
+	rcserver monitor kv_meta_server checkserver migrateserver kv_meta_server \
 	tools
 endif
