tools use libeasy. see http://rb.corp.taobao.com/r/101121/
git-svn-id: http://code.taobao.org/svn/tfs@3175 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.7/src/tools/cluster/Makefile.am
+++ b/branches/stable-2.5.7/src/tools/cluster/Makefile.am
@@ -1,10 +1,11 @@
 AM_CPPFLAGS=-I$(top_srcdir)/src\
 	    -I$(TBLIB_ROOT)/include/tbsys\
 	    -I$(TBLIB_ROOT)/include/tbnet\
+			-I$(EASY_ROOT)/include/easy\
       $(READLINE_INCLUDE)\
 		  -I$(TREST_ROOT)/include
 
-AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -ljson -lcurl
+AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -ljson -lcurl -lssl
 
 bin_PROGRAMS = transfer split_item_tool transfer_from_filesystem
 LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
@@ -16,7 +17,8 @@ LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 	$(TAIR_CACHE_LDFLAGS)\
 	$(TBLIB_ROOT)/lib/libtbnet.a\
 	$(TBLIB_ROOT)/lib/libtbsys.a\
-	$(TREST_ROOT)/lib/libtfs_cpp_restful_client.a
+	$(TREST_ROOT)/lib/libtfs_cpp_restful_client.a\
+	$(EASY_ROOT)/lib64/libeasy.a
 
 transfer_SOURCES=transfer.cpp transfer.h
 
