--- a/branches/stable-2.5.7/src/tools/util/Makefile.am
+++ b/branches/stable-2.5.7/src/tools/util/Makefile.am
@@ -1,9 +1,10 @@
 AM_CPPFLAGS=-I$(top_srcdir)/src\
 	    -I$(TBLIB_ROOT)/include/tbsys\
 	    -I$(TBLIB_ROOT)/include/tbnet\
+			-I$(EASY_ROOT)/include/easy\
 	    -fpic
 
-AM_LDFLAGS=-lrt -lpthread -ldl
+AM_LDFLAGS=-lrt -lpthread -ldl -lssl
 
 noinst_LIBRARIES = libtfstoolsutil.a
 
