--- a/branches/stable-2.5.7/src/tools/workers/Makefile.am
+++ b/branches/stable-2.5.7/src/tools/workers/Makefile.am
@@ -1,8 +1,9 @@
 AM_CPPFLAGS=-I$(top_srcdir)/src\
 	    -I$(TBLIB_ROOT)/include/tbsys\
-	    -I$(TBLIB_ROOT)/include/tbnet
+	    -I$(TBLIB_ROOT)/include/tbnet\
+			-I$(EASY_ROOT)/include/easy
 
-AM_LDFLAGS=-lrt -lpthread -ldl -luuid -lz
+AM_LDFLAGS=-lrt -lpthread -ldl -luuid -lz -lssl
 
 bin_PROGRAMS = get_all_files_in_block save_file_map_between_cluster
 
@@ -15,7 +16,7 @@ LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
   $(TAIR_CACHE_LDFLAGS) \
 	$(TBLIB_ROOT)/lib/libtbnet.a\
 	$(TBLIB_ROOT)/lib/libtbsys.a\
-	-lz
+	$(EASY_ROOT)/lib64/libeasy.a
 
 get_all_files_in_block_SOURCES = get_all_files_in_block.cpp
 
