--- a/branches/stable-2.5.1/src/checkserver/Makefile.am
+++ b/branches/stable-2.5.1/src/checkserver/Makefile.am
@@ -2,7 +2,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
             -I$(TBLIB_ROOT)/include/tbnet
 
-AM_LDFLAGS=-lrt -lpthread -ldl 
+AM_LDFLAGS=-lrt -lpthread -ldl -ljemalloc
 
 bin_PROGRAMS = checkserver
 LDADD = $(top_builddir)/src/message/libtfsmessage.a\
