add view_local_key for clientv2. see http://rb.corp.taobao.com/r/101801/
git-svn-id: http://code.taobao.org/svn/tfs@3209 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.5/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5.5/src/tools/dataserver/Makefile.am
@@ -15,8 +15,9 @@ bin_PROGRAMS = clear_file_system\
                reverse_name\
 							 check_down_disk_data\
                check_super_block \
-							 safe_remove_block \
-							 check_family
+							 check_family \
+               view_local_key \
+							 safe_remove_block
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
@@ -68,7 +69,7 @@ check_family_SOURCES = check_family.cpp
 
 #synctool_SOURCES = sync_tool.cpp # for test syncserver
 
-#view_local_key_SOURCES = view_local_key.cpp
+view_local_key_SOURCES = view_local_key.cpp
 
 #read_block_prefix_SOURCES = read_block_prefix.cpp
 
