add libeasy default path
git-svn-id: http://code.taobao.org/svn/tfs@3218 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.5/configure.ac
+++ b/branches/stable-2.5.5/configure.ac
@@ -74,9 +74,13 @@ AC_SUBST([TREST_ROOT])
 
 AC_ARG_WITH([libeasy-root],
           AS_HELP_STRING([--with-libeasy-root],
-          [restful client install path]),
+          [libeasy install path]),
           EASY_ROOT=${withval})
 AC_SUBST([EASY_ROOT])
+
+if  test -z "${EASY_ROOT}"; then
+   EASY_ROOT="/usr"
+fi
 
 AC_ARG_ENABLE([lifecycle],
            AS_HELP_STRING([--enable-lifecycle],
