modify Makefile.am. see http://rb.corp.taobao.com/r/101959/
git-svn-id: http://code.taobao.org/svn/tfs@3220 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/src/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/dataserver/Makefile.am
@@ -9,7 +9,8 @@ LDADD=$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
       $(top_builddir)/src/message/libtfsmessage.a\
       $(top_builddir)/src/common/libtfscommon.a\
       $(TBLIB_ROOT)/lib/libtbnet.a\
-      $(TBLIB_ROOT)/lib/libtbsys.a
+      $(TBLIB_ROOT)/lib/libtbsys.a\
+			$(TAIR_CACHE_LDFLAGS)
 
 noinst_LIBRARIES = libdataserver.a
 
