add check_index_tool. see http://rb.corp.taobao.com/r/101911
git-svn-id: http://code.taobao.org/svn/tfs@3221 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
@@ -15,7 +15,8 @@ bin_PROGRAMS = clear_file_system\
 							 check_down_disk_data\
                check_super_block \
 							 safe_remove_block \
-							 check_family
+							 check_family\
+							 check_index_tool
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
@@ -26,7 +27,9 @@ LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/message/libtfsmessage.a\
         $(top_builddir)/src/common/libtfscommon.a\
         $(TBLIB_ROOT)/lib/libtbnet.a\
-        $(TBLIB_ROOT)/lib/libtbsys.a
+        $(TBLIB_ROOT)/lib/libtbsys.a\
+				$(JERASURE_ROOT)/lib/libJerasure.a\
+				$(JERASURE_ROOT)/lib/libgf_complete.a
 
 clear_file_system_SOURCES = clear_file_system.cpp
 
@@ -43,6 +46,8 @@ reverse_name_SOURCES = reverse_name.cpp
 format_file_system_SOURCES = format_file_system.cpp
 
 read_index_tool_SOURCES = read_index_tool.cpp
+
+check_index_tool_SOURCES = check_index_tool.cpp
 
 check_down_disk_data_SOURCES = check_down_disk_data.cpp
 
