use jerasure by lib. see http://rb.corp.taobao.com/r/101982/
git-svn-id: http://code.taobao.org/svn/tfs@3222 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/src/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/dataserver/Makefile.am
@@ -10,7 +10,9 @@ LDADD=$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
       $(top_builddir)/src/common/libtfscommon.a\
       $(TBLIB_ROOT)/lib/libtbnet.a\
       $(TBLIB_ROOT)/lib/libtbsys.a\
-			$(TAIR_CACHE_LDFLAGS)
+			$(TAIR_CACHE_LDFLAGS)\
+			$(JERASURE_ROOT)/lib/libJerasure.a\
+			$(JERASURE_ROOT)/lib/libgf_complete.a
 
 noinst_LIBRARIES = libdataserver.a
 
@@ -18,7 +20,7 @@ DATASERVER_SOURCE_LIST_HEADER=ds_define.h blockfile_format.h super_block_manager
 physical_block_manager.h index_handlev2.h data_handlev2.h data_file.h\
 logic_blockv2.h logic_block_manager.h block_manager.h lease_managerv2.h gc.h \
 client_request_server.h  migrate_manager.h\
-dataservice.h data_helper.h galois.h jerasure.h erasure_code.h task_manager.h task.h\
+dataservice.h data_helper.h erasure_code.h task_manager.h task.h\
 traffic_control.h check_manager.h aop_meta.h aop_manager.h writable_block.h \
 writable_block_manager.h migrate_manager.h sync_base.h sync_backup.h integrity_manager.h
 
@@ -26,7 +28,7 @@ DATASERVER_SOURCE_LIST=ds_define.cpp super_block_manager.cpp physical_blockv2.cp
 physical_block_manager.cpp index_handlev2.cpp data_handlev2.cpp data_file.cpp \
 logic_blockv2.cpp logic_block_manager.cpp block_manager.cpp lease_managerv2.cpp gc.cpp \
 client_request_server.cpp  migrate_manager.cpp\
-dataservice.cpp data_helper.cpp galois.cpp jerasure.cpp erasure_code.cpp task_manager.cpp task.cpp\
+dataservice.cpp data_helper.cpp erasure_code.cpp task_manager.cpp task.cpp\
 traffic_control.cpp check_manager.cpp aop_meta.cpp aop_manager.cpp writable_block.cpp \
 writable_block_manager.cpp sync_base.cpp sync_backup.cpp integrity_manager.cpp
 
