--- a/branches/stable-2.5.1/src/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/dataserver/Makefile.am
@@ -19,15 +19,15 @@ noinst_LIBRARIES = libdataserver.a
 DATASERVER_SOURCE_LIST_HEADER=ds_define.h blockfile_format.h super_block_manager.h physical_blockv2.h\
 physical_block_manager.h index_handlev2.h data_handlev2.h data_file.h\
 logic_blockv2.h logic_block_manager.h block_manager.h lease_managerv2.h gc.h \
-client_request_server.h  migrate_manager.h\
+client_request_server.h \
 dataservice.h data_helper.h erasure_code.h task_manager.h task.h\
 traffic_control.h check_manager.h aop_meta.h aop_manager.h writable_block.h \
-writable_block_manager.h migrate_manager.h sync_base.h sync_backup.h integrity_manager.h
+writable_block_manager.h sync_base.h sync_backup.h integrity_manager.h
 
 DATASERVER_SOURCE_LIST=ds_define.cpp super_block_manager.cpp physical_blockv2.cpp\
 physical_block_manager.cpp index_handlev2.cpp data_handlev2.cpp data_file.cpp \
 logic_blockv2.cpp logic_block_manager.cpp block_manager.cpp lease_managerv2.cpp gc.cpp \
-client_request_server.cpp  migrate_manager.cpp\
+client_request_server.cpp \
 dataservice.cpp data_helper.cpp erasure_code.cpp task_manager.cpp task.cpp\
 traffic_control.cpp check_manager.cpp aop_meta.cpp aop_manager.cpp writable_block.cpp \
 writable_block_manager.cpp sync_base.cpp sync_backup.cpp integrity_manager.cpp
