--- a/branches/stable-2.5.7/src/checkserver/Makefile.am
+++ b/branches/stable-2.5.7/src/checkserver/Makefile.am
@@ -3,7 +3,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbnet\
 						-I$(EASY_ROOT)/include/easy
 
-AM_LDFLAGS=-lrt -lpthread -ldl -lssl
+AM_LDFLAGS=-lrt -lpthread -ldl -ljemalloc -lssl
 
 bin_PROGRAMS = checkserver
 LDADD = $(top_builddir)/src/message/libtfsmessage.a\
