remove jerasure deps.
git-svn-id: http://code.taobao.org/svn/tfs@3270 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
@@ -27,9 +27,7 @@ LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/message/libtfsmessage.a\
         $(top_builddir)/src/common/libtfscommon.a\
         $(TBLIB_ROOT)/lib/libtbnet.a\
-        $(TBLIB_ROOT)/lib/libtbsys.a\
-				$(JERASURE_ROOT)/lib/libJerasure.a\
-				$(JERASURE_ROOT)/lib/libgf_complete.a
+        $(TBLIB_ROOT)/lib/libtbsys.a
 
 clear_file_system_SOURCES = clear_file_system.cpp
 
