--- a/branches/stable-2.5.5/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5.5/src/tools/dataserver/Makefile.am
@@ -17,8 +17,7 @@ bin_PROGRAMS = clear_file_system\
                check_super_block \
 							 safe_remove_block \
 							 check_family\
-							 check_index_tool\
-							 view_local_key
+							 check_index_tool
 
 LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
@@ -72,7 +71,7 @@ check_family_SOURCES = check_family.cpp
 
 #synctool_SOURCES = sync_tool.cpp # for test syncserver
 
-view_local_key_SOURCES = view_local_key.cpp
+#view_local_key_SOURCES = view_local_key.cpp
 
 #read_block_prefix_SOURCES = read_block_prefix.cpp
 
