revert for last mis-commit, from r3308 to r3307
git-svn-id: http://code.taobao.org/svn/tfs@3309 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/configure.ac
+++ b/branches/stable-2.5.1/configure.ac
@@ -84,7 +84,6 @@ AC_ARG_WITH([tair-root],
            AS_HELP_STRING([--with-tair-root],
            [Tair installation path, need when enable uniquestore feature]),
            TAIR_ROOT=${withval})
-AC_SUBST([TAIR_ROOT])
 if  test -z "${TAIR_ROOT}"; then
    dnl tbnet include path supplied
    TAIR_ROOT="/usr/local"
@@ -94,37 +93,8 @@ if ! test -d "${TAIR_ROOT}/include" -a -d "${TBLIB_ROOT}/lib"; then
   AC_MSG_ERROR([TAIR_ROOT is not work! expect TAIR_ROOT/include and TAIR_ROOT/lib directory])
   exit 1;
 fi
-
-AC_ARG_WITH([diamond-root],
-           AS_HELP_STRING([--with-diamond-root],
-           [Diamond installation path, need by tair mc client]),
-           DIAMOND_ROOT=${withval})
-AC_SUBST([DIAMOND_ROOT])
-if  test -z "${DIAMOND_ROOT}"; then
-   DIAMOND_ROOT="/usr/local"
-fi
-
-if ! test -d "${DIAMOND_ROOT}/include" -a -d "${DIAMOND_ROOT}/lib"; then
-  AC_MSG_ERROR([DIAMOND_ROOT is not work! expect DIAMOND_ROOT/include and DIAMOND_ROOT/lib directory])
-  exit 1;
-fi
-
-AC_ARG_WITH([libeasy-root],
-           AS_HELP_STRING([--with-libeasy-root],
-           [Libeasy installation path, need by tair mc client]),
-           EASY_ROOT=${withval})
-AC_SUBST([EASY_ROOT])
-if  test -z "${EASY_ROOT}"; then
-   EASY_ROOT="/usr"
-fi
-
-if ! test -d "${EASY_ROOT}/include/easy" -a -d "${EASY_ROOT}/lib64"; then
-  AC_MSG_ERROR([EASY_ROOT is not work! expect EASY_ROOT/include/easy and EASY_ROOT/lib64 directory])
-  exit 1;
-fi
-
-TAIR_STORE_CPPFLAGS=" -I${TAIR_ROOT}/include -I${DIAMOND_ROOT}/include -I${EASY_ROOT}/include/easy"
-TAIR_STORE_LDFLAGS="${TAIR_ROOT}/lib/libtairmcclientapi.a ${DIAMOND_ROOT}/lib/libdiamond.a ${EASY_ROOT}/lib64/libeasy.a -lssl -lcurl -lz -lsnappy"
+TAIR_STORE_CPPFLAGS="-DWITH_UNIQUE_STORE -I${TAIR_ROOT}/include"
+TAIR_STORE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a  -L/usr/lib64/boost1.46.1 -lboost_thread -lz -lsnappy"
 AC_SUBST([TAIR_STORE_CPPFLAGS])
 AC_SUBST([TAIR_STORE_LDFLAGS])
 
@@ -138,12 +108,13 @@ if test "${enable_uniquestore}" = "yes"; then
                 AC_MSG_ERROR([TAIR_ROOT is not work! expect TAIR_ROOT/include and TAIR_ROOT/lib directory])
                 exit 1;
         fi
-        UNIQUE_STORE_CPPFLAGS="-DWITH_UNIQUE_STORE ${TAIR_STORE_CPPFLAGS}"
-        UNIQUE_STORE_LDFLAGS="${TAIR_STORE_LDFLAGS}"
+        UNIQUE_STORE_CPPFLAGS="-DWITH_UNIQUE_STORE -I${TAIR_ROOT}/include"
+        UNIQUE_STORE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz -lsnappy"
 fi
 AM_CONDITIONAL([WITH_UNIQUE_STORE],[test x$enable_uniquestore = xyes])
 AC_SUBST([UNIQUE_STORE_CPPFLAGS])
 AC_SUBST([UNIQUE_STORE_LDFLAGS])
+
 
 
 AC_ARG_ENABLE([taircache],
@@ -156,8 +127,8 @@ if test "${enable_taircache}" = "yes"; then
                 AC_MSG_ERROR([TAIR_ROOT is not work! expect TAIR_ROOT/include and TAIR_ROOT/lib directory])
                 exit 1;
         fi
-        TAIR_CACHE_CPPFLAGS="-DWITH_TAIR_CACHE ${TAIR_STORE_CPPFLAGS}"
-        TAIR_CACHE_LDFLAGS="${TAIR_STORE_LDFLAGS}"
+        TAIR_CACHE_CPPFLAGS="-DWITH_TAIR_CACHE -I${TAIR_ROOT}/include"
+        TAIR_CACHE_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz -lsnappy"
 fi
 AM_CONDITIONAL([WITH_TAIR_CACHE],[test x$enable_taircache = xyes])
 AC_SUBST([TAIR_CACHE_CPPFLAGS])
@@ -173,8 +144,13 @@ if test "${enable_kvmeta}" = "yes"; then
                 AC_MSG_ERROR([TAIR_ROOT is not work! expect TAIR_ROOT/include and TAIR_ROOT/lib directory])
                 exit 1;
         fi
+        TAIR_META_CPPFLAGS="-DWITH_TAIR_META -I${TAIR_ROOT}/include"
+        TAIR_META_LDFLAGS="${TAIR_ROOT}/lib/libtairclientapi.a -lboost_thread -lz -lsnappy"
 fi
 AM_CONDITIONAL([WITH_KV_META],[test x$enable_kvmeta = xyes])
+AC_SUBST([TAIR_META_CPPFLAGS])
+AC_SUBST([TAIR_META_LDFLAGS])
+
 AC_CACHE_CHECK(if fallocate is implemented, ac_cv_func_fallocate,
   AC_TRY_RUN([
     #include <fcntl.h>
