--- a/branches/stable-2.5.1/src/syncserver/Makefile.am
+++ b/branches/stable-2.5.1/src/syncserver/Makefile.am
@@ -7,6 +7,8 @@ AM_LDFLAGS=-lrt -lpthread -ldl
 LDADD=$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
       $(top_builddir)/src/message/libtfsmessage.a\
       $(top_builddir)/src/common/libtfscommon.a\
+      $(UNIQUE_STORE_LDFLAGS)\
+      $(TAIR_CACHE_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a\
       $(TBLIB_ROOT)/lib/libtbsys.a
 
