--- a/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
@@ -22,9 +22,10 @@ LDADD =	$(top_builddir)/src/tools/util/libtfstoolsutil.a\
 				$(top_builddir)/src/dataserver/libdataserver.a\
 				$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
 				$(top_builddir)/src/requester/libtfsrequester.a\
+				$(UNIQUE_STORE_LDFLAGS)\
+        $(TAIR_CACHE_LDFLAGS) \
 				$(top_builddir)/src/message/libtfsmessage.a\
         $(top_builddir)/src/common/libtfscommon.a\
-				$(TAIR_CACHE_LDFLAGS)\
         $(TBLIB_ROOT)/lib/libtbnet.a\
         $(TBLIB_ROOT)/lib/libtbsys.a
 
