--- a/branches/stable-2.5.1/src/migrateserver/Makefile.am
+++ b/branches/stable-2.5.1/src/migrateserver/Makefile.am
@@ -4,9 +4,12 @@ AM_CPPFLAGS =-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lrt -lpthread -ldl
 
-LDADD=$(top_builddir)/src/requester/libtfsrequester.a\
+LDADD=$(top_builddir)/src/clientv2/.libs/libtfsclientv2.a\
+      $(top_builddir)/src/requester/libtfsrequester.a\
       $(top_builddir)/src/message/libtfsmessage.a\
       $(top_builddir)/src/common/libtfscommon.a\
+      $(UNIQUE_STORE_LDFLAGS)\
+      $(TAIR_CACHE_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a\
       $(TBLIB_ROOT)/lib/libtbsys.a
 
