--- a/branches/stable-2.5.1/src/requester/Makefile.am
+++ b/branches/stable-2.5.1/src/requester/Makefile.am
@@ -6,6 +6,8 @@ AM_LDFLAGS=-lrt -lpthread -ldl
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a\
       $(top_builddir)/src/common/libtfscommon.a\
+      $(UNIQUE_STORE_LDFLAGS)\
+      $(TAIR_CACHE_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a\
       $(TBLIB_ROOT)/lib/libtbsys.a
 
