--- a/branches/stable-2.5.1/tests/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/tests/dataserver/Makefile.am
@@ -11,6 +11,7 @@ LDADD=$(top_builddir)/src/dataserver/libdataserver.a \
       $(top_builddir)/src/clientv2/.libs/libtfsclientv2.a \
 			$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/libtfscommon.a \
+      $(TAIR_CACHE_LDFLAGS)\
 			$(TBLIB_ROOT)/lib/libtbnet.a \
 			$(TBLIB_ROOT)/lib/libtbsys.a
 
