ns tairclient use diamond. see http://rb.corp.taobao.com/r/104685/
git-svn-id: http://code.taobao.org/svn/tfs@3315 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.5/src/kv_meta_server/Makefile.am
+++ b/branches/stable-2.5.5/src/kv_meta_server/Makefile.am
@@ -2,13 +2,13 @@ AM_CPPFLAGS=-Wall -I$(top_srcdir)/src\
             -I$(TBLIB_ROOT)/include/tbsys\
             -I$(TBLIB_ROOT)/include/tbnet \
 						-I$(EASY_ROOT)/include/easy \
-						$(TAIR_META_CPPFLAGS) $(MYSQL_CFLAGS)
+						$(MYSQL_CFLAGS)
 
-AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -lssl $(TAIR_META_LDFLAGS) 
+AM_LDFLAGS=-lz -lrt -lpthread -ldl -luuid -lssl
 
 LDADD=$(top_builddir)/src/message/libtfsmessage.a \
       $(top_builddir)/src/common/mysql_cluster/libkvengine_mysql.a \
-      $(top_builddir)/src/common/libtfscommon.a $(TAIR_META_LDFLAGS)\
+      $(top_builddir)/src/common/libtfscommon.a \
 			$(MYSQL_LDFLAGS)\
       $(TBLIB_ROOT)/lib/libtbnet.a \
       $(TBLIB_ROOT)/lib/libtbsys.a \
@@ -20,7 +20,7 @@ kvmetaserver_INCLUDE= kv_meta_server_manager.h kv_root_server.h kv_meta_heart_ma
 
 
 libkvmetaserver_a_SOURCES=kv_meta_service.cpp meta_info_helper.cpp kv_meta_heart_manager.cpp life_cycle_helper.cpp \
-													$(tair_kv_source)  $(kvmetaserver_INCLUDE)
+													$(kv_engine_source)  $(kvmetaserver_INCLUDE)
 
 KVROOTSERVER_SOURCE_LIST_HEADER=kv_root_server.h kv_meta_server_manager.h life_cycle_helper.h
 KVROOTSERVER_SOURCE_LIST=kv_root_server.cpp kv_meta_server_manager.cpp life_cycle_helper.cpp $(KVROOTSERVER_SOURCE_LIST_HEADER)
