--- a/branches/stable-2.5.5/src/life_cycle_manager/root_manager/Makefile.am
+++ b/branches/stable-2.5.5/src/life_cycle_manager/root_manager/Makefile.am
@@ -20,7 +20,7 @@ noinst_LIBRARIES=librootserver.a
 ROOTSERVER_SOURCE_LIST_HEADER=exp_root_server.h exp_server_manager.h handle_task_helper.h #global_factory.h exp_server_heart_manager.h 
 
 ROOTSERVER_SOURCE_LIST=exp_root_server.cpp exp_server_manager.cpp handle_task_helper.cpp\
-											 $(ROOTSERVER_SOURCE_LIST_HEADER) #global_factory.cpp exp_server_heart_manager.cpp
+											 $(kv_engine_source) $(ROOTSERVER_SOURCE_LIST_HEADER) #global_factory.cpp exp_server_heart_manager.cpp
 
 
 librootserver_a_SOURCES=$(ROOTSERVER_SOURCE_LIST)
