--- a/branches/stable-2.5.5/src/tools/nameserver/Makefile.am
+++ b/branches/stable-2.5.5/src/tools/nameserver/Makefile.am
@@ -3,10 +3,9 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 	    -I$(TBLIB_ROOT)/include/tbsys\
       -I$(TBLIB_ROOT)/include/tbnet\
 			-I$(EASY_ROOT)/include/easy\
-	    $(READLINE_INCLUDE)\
-			$(TAIR_STORE_CPPFLAGS)
+	    $(READLINE_INCLUDE)
 
-AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz -lssl $(TAIR_CACHE_LDFLAGS)
+AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz -lssl
 
 bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order # import_family_info export_family_info
 
@@ -20,9 +19,7 @@ LDADD = $(top_builddir)/src/tools/util/libtfstoolsutil.a\
 	$(top_builddir)/src/requester/libtfsrequester.a\
 	$(top_builddir)/src/message/libtfsmessage.a\
 	$(top_builddir)/src/common/libtfscommon.a\
-	$(UNIQUE_STORE_LDFLAGS)\
   $(TAIR_CACHE_LDFLAGS) \
-	$(TAIR_STORE_LDFLAGS) \
 	$(TBLIB_ROOT)/lib/libtbnet.a\
 	$(TBLIB_ROOT)/lib/libtbsys.a\
 	$(EASY_ROOT)/lib64/libeasy.a\
