--- a/tags/release-2.2.16/conf/ds.conf
+++ b/tags/release-2.2.16/conf/ds.conf
@@ -6,39 +6,38 @@ log_size=1073741824
 log_num = 64 
 
 #log file level default debug
-log_level=debug
+log_level=info
 
 #main queue size default 10240
 task_max_queue_size = 10240
 
 #listen port
-port = 9998 
+port = 8200 
 
 #work directoy
-work_dir=/home/xxxx/xxxxx/tfs
+work_dir=/home/xxx/tfs
 
 #device name
 dev_name= bond0
 
 #work thread count default 4
-thread_count = 4
+thread_count = 32 
 
 #ip addr
-ip_addr = 10.232.35.41
+ip_addr = 192.168.0.3
 
 [dataserver]
 
 #nameserver ip addr(vip)
-ip_addr = 192.168.0.3 
+ip_addr = 192.168.0.1
 
-ip_addr_list = 192.168.0.1|192.168.0.2
+ip_addr_list = 192.168.0.1|192.168.0.2 
 
 #nameserver port
-port = 9999 
+port = 8100
 
-#slave_nsip = 192.168.0.2
-
-#slave_nsport = 9999
+# slave cluster ns ip:port
+# slave_nsip = 192.168.0.10:8100
 
 #heart interval time(seconds)
 heart_interval = 2
@@ -51,11 +50,11 @@ check_interval = 2
 
 #expire_compactblock_time = 600
 
-replicate_threadcount = 2
+replicate_threadcount = 1
 
 #write_sync_flag = 1
 
-block_max_size = 7549747 
+block_max_size = 75497472 
 
 dump_visit_stat_interval = 60
 
@@ -63,7 +62,7 @@ dump_visit_stat_interval = 60
 
 backup_type = 1
 
-backup_path = /home/xxxxx/xxxxx/tfs
+#backup_path = /home/admin/tfs
 
 #max_data_file_nums = 50
 
@@ -77,26 +76,24 @@ backup_path = /home/xxxxx/xxxxx/tfs
 
 #dump_stat_info_interval = 60000000
 
-mount_name = /home/xxxxx/xxxxx/tfs/disk
+mount_name = /data/disk
 
-mount_maxsize = 4194304 
+# KB
+mount_maxsize = 961227000
 
 base_filesystem_type = 1
 
 superblock_reserve = 0
 
-avg_file_size = 40960
+# bytes
+avg_file_size = 15360
 
-mainblock_size = 7549747
+# bytes
+mainblock_size = 75497472 
 
-extblock_size = 419430
+# bytes
+extblock_size = 4194304
 
 block_ratio = 0.5
 
 hash_slot_ratio = 0.5
-
-ds_thread_count = 4
-
-#access_control_ipmask = 192.168.0.1
-#
-#access_control_file = /home/xxxxx/xxxxxx/tfs/control.file
