--- a/tags/release-2.2.16/conf/ns.conf
+++ b/tags/release-2.2.16/conf/ns.conf
@@ -6,107 +6,113 @@ log_size=1073741824
 log_num = 64 
 
 #log file level default debug
-log_level=debug
+log_level=info
 
 #main queue size default 10240
 task_max_queue_size = 10240
 
 #listen port
-port = 8108
+port = 8100
 
 #work directoy
-work_dir=/home/xxxx/xxxx/tfs
+work_dir=/home/xxxx/tfs
 
 #device name
 dev_name= bond0
 
 #work thread count default 4
-thread_count = 4
+thread_count =32 
 
 #ip addr(vip)
-ip_addr = 192.168.0.3
+ip_addr = 192.168.0.1
 
 [nameserver]
 
-safe_mode_time = 300 
+safe_mode_time = 360
 
 ip_addr_list = 192.168.0.1|192.168.0.2
 
 group_mask = 255.255.255.255
 
-#
-block_max_size = 83886080 
+#second
+max_write_timeout = 3
 
-#
-max_replication = 2 
+#max_task_in_machine_nums = 14
 
-#
-min_replication = 2 
+#cleanup_write_timeout_threshold = 40960
 
-# use capacity ratio
-use_capacity_ratio = 98
+# cluster id defalut 1
+cluster_id = 1 
 
 # block use ratio
 block_max_use_ratio = 98
 
-#heart interval time(seconds)
-heart_interval = 2
+# bytes
+block_max_size = 75497472 
 
-# object dead max time(seconds) default
-object_dead_max_time = 3600
-
-# cluster id defalut 1
-cluster_id = 1
+#
+max_replication = 2 
 
 # block lost, replicate ratio
-replicate_ratio_ = 50
+replicate_ratio = 50
 
-max_write_filecount = 16
+max_write_filecount = 64 
 
-heart_thread_count = 2 
+# use capacity ratio
+use_capacity_ratio = 96
 
-heart_max_queue_size = 10
+#heart interval time(seconds)
+heart_interval = 4
+
+# object dead max time(seconds) default
+object_dead_max_time = 300
+
+#
+object_clear_max_time = 180 
+
+heart_thread_count = 4 
+
+heart_max_queue_size = 2048
+
+report_block_thread_count = 6
+
+report_block_max_queue_size = 32
+
+report_block_hour_range = 2~4
+
+#day
+report_block_time_interval = 1
+
+#heart_interval * 2
+#report_block_expired_time = 4
 
 #replicate block wait time
-repl_max_time = 60
+repl_wait_time = 180
 
-compact_delete_ratio =  15  
+compact_delete_ratio =  10  
 
 compact_max_load = 200
 
-object_dead_max_time = 86400
-
-object_clear_max_time = 300
-
-max_wait_write_lease = 15
-
-lease_expired_time = 3
-
-max_lease_timeout = 3000
-
-cleanup_lease_threshold = 102400
-
-build_plan_interval = 10
-
-run_plan_expire_interval = 120
-
-build_plan_ratio = 25
+compact_hour_range = 1~10
 
 dump_stat_info_interval = 60000000 
 
-build_plan_default_wait_time = 2 
-
-balance_max_diff_block_num = 5
+balance_percent = 0.05
 
 add_primary_block_count = 3
 
-block_chunk_num = 32
-
 task_percent_sec_size = 200 
-
-task_max_queue_size = 10000
 
 oplog_sync_max_slots_num = 1024
 
 oplog_sync_thread_num = 1
 
+group_count = 1
+
+group_seq  = 0
+
+discard_newblk_safe_mode_time = 360 
+
+choose_target_server_random_max_num = 128
+
+#task_expired_time = 120
