add dump_file_name tool. see http://rb.corp.taobao.com/r/108746/
git-svn-id: http://code.taobao.org/svn/tfs@3327 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
+++ b/branches/stable-2.5.1/src/tools/dataserver/Makefile.am
@@ -10,6 +10,7 @@ bin_PROGRAMS = clear_file_system\
                format_file_system\
                read_super_block\
 							 read_index_tool\
+							 dump_file_name\
 							 convert_name\
                reverse_name\
 							 check_down_disk_data\
@@ -44,6 +45,8 @@ reverse_name_SOURCES = reverse_name.cpp
 format_file_system_SOURCES = format_file_system.cpp
 
 read_index_tool_SOURCES = read_index_tool.cpp
+
+dump_file_name_SOURCES = dump_file_name.cpp
 
 check_index_tool_SOURCES = check_index_tool.cpp
 
