add ns_meta read/write tool. see http://rb.corp.taobao.com/r/105789/
git-svn-id: http://code.taobao.org/svn/tfs@3340 b722c2b5-6a69-4643-bcd1-1a75825fa998

--- a/branches/stable-2.5.5/src/tools/nameserver/Makefile.am
+++ b/branches/stable-2.5.5/src/tools/nameserver/Makefile.am
@@ -7,7 +7,7 @@ AM_CPPFLAGS=-I$(top_srcdir)/src\
 
 AM_LDFLAGS=-lrt -lpthread -ldl $(READLINE_LIB) -luuid -lz -lssl
 
-bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order # import_family_info export_family_info
+bin_PROGRAMS = admintool tfstool ssm repair_file_tool stat_tool gen_compact_blk_order ns_meta_tool # import_family_info export_family_info
 
 if WITH_TAIR_CACHE
 #bin_PROGRAMS += remote_block_cache_tool
@@ -41,3 +41,4 @@ stat_tool_SOURCES=stat_main.cpp stat_tool.cpp stat_tool.h common.cpp common.h sh
 gen_compact_blk_order_SOURCES = gen_compact_blk_order.cpp common.cpp common.h
 #import_family_info_SOURCES = import_family_info.cpp
 #export_family_info_SOURCES = export_family_info.cpp
+ns_meta_tool_SOURCE=ns_meta_tool.cpp
